--- a/index.html
+++ b/index.html
@@ -14,13 +14,108 @@
         <div id="login-conta" class="icon"><img id="conta" src="https://cdn-icons-png.flaticon.com/512/711/711769.png" alt="imagem-perfil"></div>
     </header>
     <section id="menu-lateral" class="fechar-menu">
-        <div id="menu-fechar" class="icon, menu" onclick="ExibirMenu()">☰</div>
-        <div class="texto">Minhas Compras</div>
-        <div class="texto">Lista de Desejos</div>
-        <div class="texto">Recomendações</div>
+        <div>
+            <div id="menu-fechar" class="icon, menu" onclick="ExibirMenu()">☰</div>
+            <div class="texto">Minhas Compras</div>
+            <div class="texto">Lista de Desejos</div>
+            <div class="texto">Recomendações</div>
+        </div>
+        <div id="redes-sociais">
+            <a href="https://www.instagram.com/isg007/" target="_blank"><img id="instagram" src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="instagram"></a>
+        </div>
     </section>
     <main>
         <nav></nav>
+        <section class="produtos-lista">
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="produtos-lista">
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="produtos-lista">
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="produtos-lista">
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="produtos-lista">
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+            <div class="produtos-borda-externa">
+                <div class="produtos">
+                    <div class="imagem-produto"></div>
+                    <div class="descricao-produto">
+                        <button class="comprar">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="produtos-lista">
             <div class="produtos-borda-externa">
                 <div class="produtos">
